--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -19,8 +19,6 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_certificate     /run/secrets/inception.crt;
         ssl_certificate_key /run/secrets/inception.key;
-	#ssl_certificate     /etc/nginx/ssl/inception.crt;
-	#ssl_certificate_key /etc/nginx/ssl/inception.key;
 
         root /var/www/wordpress;
         index index.php index.html index.htm;
@@ -30,9 +28,11 @@ http {
         }
 
         location ~ \.php$ {
+	    try_files $uri = 404;
+            fastcgi_pass wordpress:9000;
+            fastcgi_index index.php;
             include fastcgi_params;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_pass wordpress:9000;
         }
 
         location ~ /\.ht {
