--- a/srcs/.env
+++ b/srcs/.env
@@ -1,30 +1,30 @@
 # =========================
 # MariaDB
 # =========================
-MYSQL_ROOT_PASSWORD=rootpassword
-MYSQL_DATABASE=wp_inception_db
-MYSQL_USER=dagimeno
-MYSQL_PASSWORD=wppassword
+MYSQL_ROOT_PASSWORD
+MYSQL_DATABASE
+MYSQL_USER
+MYSQL_PASSWORD
 
 # =========================
 # WordPress
 # =========================
-WP_ADMIN_USER=dagimeno
-WP_ADMIN_PASSWORD=adminpassword
-WP_ADMIN_EMAIL=dagimeno@dagimeno.42.fr
+WP_ADMIN_USER
+WP_ADMIN_PASSWORD
+WP_ADMIN_EMAIL
 
-WP_PATH=/var/www/wordpress
-WP_USER=author
-WP_USER_PASSWORD=authorpassword
-WP_USER_EMAIL=author@dagimeno.42.fr
+WP_PATH
+WP_USER
+WP_USER_PASSWORD
+WP_USER_EMAIL
 
 # =========================
 # WordPress site
 # =========================
-WP_TITLE=Inception
-WP_URL=https://dagimeno.42.fr
+WP_TITLE
+WP_URL
 
 # =========================
 # Nginx
 #==========================
-SSL_DIR=/etc/nginx/ssl
+SSL_DIR
