add ftp container

--- a/srcs/.env.template
+++ b/srcs/.env.template
@@ -29,3 +29,9 @@ WP_URL
 # Nginx
 #==========================
 SSL_DIR
+
+# =========================
+# Ftp Sever
+# =========================
+FTP_USER
+FTP_PASSWORD
