--- a/srcs/requirements/bonus/redis/Dockerfile
+++ b/srcs/requirements/bonus/redis/Dockerfile
@@ -3,7 +3,8 @@
 FROM debian:bookworm-slim
 
 RUN apt-get update \
-	&& apt-get install -y --no-install-recommends redis-server
+	&& apt-get install -y --no-install-recommends redis-server \
+	&& rm -rf /var/lib/apt/lists/*
 
 COPY ./conf/redis.conf /etc/redis/redis.conf
 
