--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -70,6 +70,17 @@ services:
       - "21:21"
       - "21000-21010:21000-21010"
     restart: unless-stopped
+  adminer:
+    image: adminer:1
+    container_name: adminer
+    build: requirements/bonus/adminer
+    depends_on:
+      - mariadb
+    ports:
+      - "8080:8080"
+    networks:
+      - inception
+
 volumes:
   mariadb:
     driver: local
