--- a/srcs/.env.template
+++ b/srcs/.env.template
@@ -35,3 +35,10 @@ SSL_DIR
 # =========================
 FTP_USER
 FTP_PASSWORD
+
+# =========================
+# Portainer
+# =========================
+PORTAINER_ADMIN
+PORTAINER_PASSWORD 
+#PORTAINER PASSWORD MUST HAVE AT LEAST 12 CHARACTERS!!
