add static page bonus

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -27,8 +27,15 @@ http {
             try_files $uri $uri/ /index.php?$args;
         }
 
+        location /cv/ {
+            alias /var/www/cv/;
+            index index.html;
+            autoindex off;
+        }
+
+
         location ~ \.php$ {
-	    try_files $uri = 404;
+	        try_files $uri = 404;
             fastcgi_pass wordpress:9000;
             fastcgi_index index.php;
             include fastcgi_params;
