--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     restart: unless-stopped
     expose:
       - "3306"
+    stop_grace_period: 3s
   nginx:
     image: nginx:1
     container_name: nginx
@@ -69,6 +70,7 @@ services:
       - "21:21"
       - "21000-21010:21000-21010"
     restart: unless-stopped
+    stop_grace_period: 3s
   adminer:
     image: adminer:1
     container_name: adminer
@@ -79,6 +81,7 @@ services:
       - "8080:8080"
     networks:
       - inception
+    stop_grace_period: 3s
   portainer:
     image: portainer:1
     container_name: portainer
@@ -92,6 +95,7 @@ services:
     ports:
       - "9443:9443"
     restart: unless-stopped
+    stop_grace_period: 3s
 volumes:
   mariadb:
     driver: local
